--- a/src/styles/components/CreateTouristPoint.scss
+++ b/src/styles/components/CreateTouristPoint.scss
@@ -68,7 +68,7 @@
               padding: 12px 20px;
               border: none;
               border-radius: 4px;
-              background-color: var(--primarycolor);
+              background-color: var(--primary-color);
               color: #fff;
               font-size: 1rem;
               cursor: pointer;
@@ -269,7 +269,7 @@
           padding: 8px 10px;
           border: none;
           border-radius: 4px;
-          background-color: var(--primarycolor);
+          background-color: var(--primary-color);
           color: #fff;
           font-size: 0.8rem;
           cursor: pointer;
@@ -290,6 +290,9 @@
             width: 45%;
             font-size: 0.8rem;
             background-color: #555;
+            &:hover {
+              background-color: rgb(143, 0, 0);
+            }
           }
     }
   }
