--- a/src/styles/pages/Login.scss
+++ b/src/styles/pages/Login.scss
@@ -9,13 +9,15 @@
     background-size: cover;
     justify-content: center;
   }
-.content {
+.contentlogin {
   padding-top: 2%;
-  // background-color:#eaeaeada;
       width: 50%;
       display: flex;
       flex-direction: column;
       align-items: center;
+      @media (max-width: 500px) {
+        width: 85%;
+      }
     }
     
 .form-container {
