--- a/src/styles/pages/Register.scss
+++ b/src/styles/pages/Register.scss
@@ -15,6 +15,9 @@
   min-height: 90%;
   max-width: 80%;
   width: 100%;
+  @media (max-width: 500px) {
+    max-width: 85%;
+  }
 }
 
 .form-container {
