detalles en formulario de turista

--- a/src/styles/pages/PasswordReset.scss
+++ b/src/styles/pages/PasswordReset.scss
@@ -26,7 +26,7 @@
     }
     h2 {
         text-align: center;
-        color: #317BBC;
+        color: var(--primary-color);
     }
 
     form {
@@ -36,7 +36,7 @@
 
     label {
         margin-bottom: 5px;
-        color: #317BBC;
+        color: var(--primary-color);
     }
 
     input[type="email"],
@@ -50,19 +50,19 @@
 
     button {
         padding: 10px;
-        background-color: #317BBC;
+        background-color: var(--primary-color);
         color: #fff;
         border: none;
         border-radius: 4px;
         cursor: pointer;
 
         &:hover {
-            background-color: #265a8f;
+            background-color: var(--primary-color-active);
         }
     }
 
     .error {
-        color: red;
+        color: rgb(171, 4, 4);
         margin-bottom: 10px;
     }
 }
