--- a/src/styles/pages/Register.scss
+++ b/src/styles/pages/Register.scss
@@ -22,7 +22,8 @@
 
 .form-container {
   width: 100%;
-
+background-image: url('../../assets/images/fondo-poli.svg');
+background-size: cover;
   h3 {
     color: rgb(66, 66, 66);
     margin-bottom: 20px;
@@ -33,6 +34,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  
   p {
     font-size: 10px;
     color: #333;
@@ -53,8 +55,20 @@
       border: 1px solid #ccc;
       border-radius: 4px;
     }
+    .divFecha{
+      position: relative;
+      .BirthDate{
+        background-color: #fff;
+        position: absolute;
+        left: 10px;
+        top: 50%;
+        font-size: small;
+        color: #737272;
+        margin-top: -10px;
+      }
+    }
   }
-
+  
   .password-divider {
     display: flex;
     flex-direction: column;
@@ -76,19 +90,19 @@
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
-
+    
     input {
       margin-right: 0.5rem;
     }
   }
-
+  
   .form-error {
     color: red;
     font-size: 0.875rem;
     margin-bottom: 1rem;
     grid-column: span 2; 
   }
-
+  
   .submit-button {
     padding: 0.75rem;
     border: none;
@@ -127,14 +141,14 @@
       width: 90%;
     }
   }
-
+  
   .already-account-button {
     margin-top: 1rem;
     color: #333;
     text-align: center;
     text-decoration: none;
     grid-column: span 2; // Hacer que el enlace ocupe dos columnas
-
+    
     &:hover {
       text-decoration: underline;
       color: var(--secundary-color);
@@ -152,7 +166,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 20%;
+  width: 15%;
   margin-bottom: 2%;
 }
 .logoregister{
@@ -163,8 +177,8 @@
       & img{
         width: 5%;
       }
-}
-.logoregister2{
+    }
+    .logoregister2{
       display: flex;
       justify-content: center;
       margin-bottom: 15%;
@@ -172,3 +186,4 @@
         max-width: 5%;
       }
 }
+      
