--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -38,6 +38,7 @@
         flex-direction: column;
         width: 100%;
         align-self: center;
+        justify-content: flex-start;
         padding-left: 12%;
         height: 150px;
       }
