--- a/src/styles/components/_RegisterPartnerModal.scss
+++ b/src/styles/components/_RegisterPartnerModal.scss
@@ -93,7 +93,7 @@
       margin-top: 10px;
       border: none;
       border-radius: 5px;
-      background-color: var(--secundary-color);
+      background-color: var(--primary-color);
       color: #fff;
       font-size: 16px;
       cursor: pointer;
