--- a/src/styles/pages/_userManagement.scss
+++ b/src/styles/pages/_userManagement.scss
@@ -299,3 +299,41 @@
 .pagination button:hover:not(.active) {
     background-color: var(--greenSoft-color);
 }
+
+.btnsTable{
+    display: flex;
+    justify-content: space-around;
+}
+  
+    /* Icono de editar */
+    .buttonEd {
+      color: #007A8C;
+      cursor: pointer;
+      padding: 5px;
+      &:hover {
+        color: #0195ac;
+      }
+    }
+  
+    /* Icono de eliminar */
+    .buttonDel {
+      color: rgb(146, 2, 2);
+      cursor: pointer;
+      padding: 5px;
+      &:hover {
+        color: rgb(203, 0, 0);
+      }
+    }
+    .loaderUsers{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        align-items: center;
+        top: 50px;
+        background-color: #33333313;
+        color: var(--primary-color);
+        font-weight: 600;
+
+    }
