mejoras en users y creación de asociado

--- a/src/styles/pages/Login.scss
+++ b/src/styles/pages/Login.scss
@@ -5,8 +5,8 @@
     flex-direction: column;
     align-items: center;
     // background-color: var(--primary-color);
-    // background-image: url(../../assets/images/fondo-poli.svg);
-    background-size: cover;
+    background-image: url(../../assets/images/fondo-poli.svg);
+    background-size:contain;
     justify-content: center;
   }
 .contentlogin {
@@ -20,13 +20,14 @@
       }
     }
     
-.form-container {
+.form-containerLogin {
       width: 100%;
       display: flex;
       justify-content: center;
       flex-direction: column;
       align-items: center;
       height: 100%;
+      
     }
 .logoCapitanDiv{
   display: flex;
@@ -35,6 +36,7 @@
   flex-direction: column;
   align-content: center;
   align-items: center;
+  background-color: #fff;
     }
 .logoCapitan{
   display: flex;
@@ -93,7 +95,7 @@
       align-items: center;
     }
    
-.form-input {
+.form-inputLogin {
       padding: 10px;
       border: 2px solid #e5e7eb;
       width: 250px;
@@ -101,7 +103,7 @@
       margin-bottom: 10px;
     }
     
-.form-input:focus {
+.form-inputLogin:focus {
       outline: none;
       border-color: var(--greenSoft-color);
     }
