--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -10,7 +10,7 @@ html, body {
 //   line-height: 1.1;
 // }
 .swal2-confirm.swal2-styled{
-  background-color: var(--secundary-color);
+  background-color: var(--primary-color);
   min-width: 100px;
   border: none;
   &:focus{
