--- a/src/styles/pages/_userManagement.scss
+++ b/src/styles/pages/_userManagement.scss
@@ -272,7 +272,7 @@
 
 .user-table tbody tr:hover {
     background-color: #f1f1f1;
-    cursor: pointer;
+    // cursor: pointer;
 }
 .pagination {
     display: flex;
