--- a/src/styles/pages/TouristPointDetail.scss
+++ b/src/styles/pages/TouristPointDetail.scss
@@ -15,6 +15,7 @@
         width: 100%;
         max-height: 300px;
         margin-bottom: 16px;
+        border-radius: 10px;
       }
       .btnMore{
         color: var(--primary-color);
@@ -65,10 +66,12 @@
     display: flex;
     height: 100px;
     gap: 10px;
+
     & .thumbnail-wrapper-list{
         height: 100px;
         & img{
             height: 70px;
+            border-radius: 10px;
             &:hover{
                 cursor: pointer;
             }
@@ -116,5 +119,8 @@
             justify-content: center;
             align-items: center;
         }
-           }
-  }
+      }
+    }
+    .descriptionTOur{
+      margin-top: 5%;
+    }
