--- a/src/styles/pages/_EditPromotionModal.scss
+++ b/src/styles/pages/_EditPromotionModal.scss
@@ -3,7 +3,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  // padding-top: 2%;
+  // padding-bottom: 5%;
   background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
@@ -12,12 +14,14 @@
   pointer-events: none;
   transition: opacity 0.3s ease;
   z-index: 2;
+  overflow-y: auto;
   @media (max-width: 768px) {
     overflow-y: auto;
   }
   &.is-open {
     opacity: 1;
     pointer-events: auto;
+    z-index: 15;
   }
 
   .modal-content {
@@ -25,13 +29,15 @@
     padding: 2rem;
     border-radius: 8px;
     width: 100%;
-    max-width: 1100px;
+    max-height: 800px;
+    max-width: 90%;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
     @media (max-width: 768px) {
       max-width: 90%;
-      max-height: 90%;
+      // max-height: 90%;
       overflow-y: auto;
     }
     h2 {
