--- a/src/styles/components/ButtonStyles.scss
+++ b/src/styles/components/ButtonStyles.scss
@@ -1,39 +1,65 @@
-.btnSave {
+.btnSave.MuiButton-root {
     color: var(--primary-color);
-    background-color: #f0f8ff;
     border: 1px solid var(--primary-color);
+
     &:hover {
         color: #fff;
-        // background-color: #00b6ce;
+        background-color: #01abc1;
     }
+    @media (max-width: 600px) {
+        font-size: 0.6rem;
+        font-weight: 700;
+        padding: 5px 10px;
+      }
 }
 
-.btnCancel {
+.btnCancel.MuiButton-root {
     color: #af2432;
-    background-color: #f8d7da;
+    background-color: #ffffff;
     border: 1px solid #af2432;
-    &:hover {
-        color: #fff;
-        background-color: #de1227;
-    }
-}
 
-.btnEdit {
-    color: var(--primary-color);
-    border: solid 0.2px var(--primary-color);
-    padding: 5px 15px;
-    &:hover {
-        color: #fff;
-        background-color: var(--greenSoft-color);
-    }
-}
-
-.btnDelete {
-    color: #af2432;
-    border: solid 0.2px #af2432;
-    padding: 5px 15px;
     &:hover {
         color: #fff;
         background-color: #af2432;
     }
+    @media (max-width: 600px) {
+        font-size: 0.6rem;
+        font-weight: 700;
+        padding: 5px 10px;
+        & span{
+            font-size: 0.7em;
+        }
+      }
+}
+
+.btnEdit.MuiButton-root {
+    color: var(--primary-color);
+    border: solid 0.2px var(--primary-color);
+    padding: 5px 15px;
+
+    &:hover {
+        color: #fff;
+        background-color: var(--greenSoft-color);
+    }
+    @media (max-width: 600px) {
+        font-size: 0.6rem;
+        font-weight: 700;
+        padding: 5px 10px;
+      }
+}
+
+.btnDelete.MuiButton-root {
+    color: #af2432;
+    border: solid 0.2px #af2432;
+    padding: 5px 15px;
+
+    &:hover {
+        color: #fff;
+        background-color: #af2432;
+    }
+    @media (max-width: 600px) {
+        font-size: 0.6rem;
+        font-weight: 700;
+        padding: 5px 10px;
+      }
 }
