--- a/src/styles/components/_navBar.scss
+++ b/src/styles/components/_navBar.scss
@@ -7,13 +7,18 @@
     // flex-wrap: wrap;
     flex-direction: row;
     align-content: center;
-    align-items: center;
+    align-items: center;position: absolute;
+    top: 0;
     z-index: 10;
     justify-content: space-between;
+    background-color: (--primary-color);
     @media (max-width: 500px) {
-      flex-direction: row;
-      padding: 15px;
-
+      padding-top: 0;
+        height: 80px;
+        flex-direction: row;
+        align-items: flex-end;
+        padding: 15px;
+        background-color: var(--primary-color);
     }
   }
   .customText {
@@ -41,6 +46,7 @@
     padding-top: 1%;
     padding-bottom: 1%;
     padding-left: 2%;
+    z-index: 10;
     & a{
       display: flex;
       width: 100%;
@@ -118,7 +124,7 @@
       cursor: pointer;
   }
   @media (max-width: 500px) {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
   }
   .userName{
