--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,14 +1,15 @@
 .sidebar-list{
-  height: 100%;
+  // min-height: 100vh;
     flex-direction: column;
     z-index: 1;
     width: 70px;
-
+    margin-top: 150px;
     &:hover{
       width: 100%;
     }
     @media (max-width: 480px) {
-      margin-top: 200px;
+      margin-top: 0px;
+      padding-top: 100px;
   }
 }
 .logOut {
@@ -19,7 +20,7 @@
   position: absolute;
     width: 70px;
     align-items: flex-start;
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--primary-color);
     transition: width 0.5s;
     overflow-x: hidden;
@@ -27,6 +28,7 @@
     justify-content: space-between;
     z-index: 2;
     transition: width 0.5s ease, opacity 0.2s ease-in;
+    
     @media (max-width: 480px) {
       position: fixed;
       overflow-x:visible;
@@ -38,15 +40,15 @@
   & .cont{
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%;
+    align-items: flex-start;
+    // min-height: 100vh;
   }
   &:hover {
       width: 200px;
       display: flex;
       z-index: 1;
       align-items: flex-start;
-      // height: 100%;
+      min-height: 100vh;
       & .logOut {
         align-self: center;
         display: flex;
@@ -144,17 +146,16 @@
   .politicas{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 10px;
-    display: none;
     color: #fff;
     flex-direction: column;
     justify-content: center;
     margin-left: 10px;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
     align-items: center;
     width: 150px;
     opacity: 0;
     text-align: center; 
-   
+    display: flex;
 
     &.open {
       width: 200px;
