--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -7,15 +7,15 @@
 }
 .Container_layout{
     // overflow-y: auto;
-    display: flex;
+    // display: flex;
     flex-direction: column;
-    // height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 }
 
 .childrenLayout{
     min-width: 100vw;
-    // min-height: 100vh;
+    min-height: 100vh;
 }
 
 .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root.Mui-focused{
