--- a/src/styles/pages/Dashboard.scss
+++ b/src/styles/pages/Dashboard.scss
@@ -1,30 +1,42 @@
 .dashboardContainer {
     padding: 3%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-content: center;
     align-items: center;
     position: relative;
+    background-image: url(../../assets/images/fondo-poli.svg);
+    background-repeat: repeat;
+    @media (max-width: 768px) {
+        padding-top: 100px;
+       }
 }
 
-.dashboardTitle {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    text-align: center;
-}
+// .dashboardTitle {
+//     text-align: center;
+//         font-size: 1.2rem;
+//         color: #027A8C;
+//         margin-bottom: 10px;
+//         @media (max-width: 480px) {
+//             font-size: 1rem;
+//             margin-bottom: 0px;
+//             margin-top: 10px;
+//         }
+// }
 
 .cardsContainer {
     z-index: 0;
     width: 70%;
-    padding-left: 2%;
+    padding-left: 7%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    padding-top: 10%;
     @media (max-width: 768px) {
-       width: 90%;
+       width: 95%;
       }
 }
 
@@ -65,6 +77,21 @@
         width: 90%;
         color: #fff;
     }
+    @media (max-width: 768px) {
+        width: 100px;
+        height: 100px;
+        & .cardIcon {
+            font-size: 1rem;
+            margin-bottom: 10px;
+            width: 30px;
+            height: 30px;
+        }
+        & .cardLabel {
+            font-size: 0.7rem;
+            width: 90%;
+            color: #fff;
+        }
+       }
 }
 .Background{
     position: absolute;
