--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -2,13 +2,14 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   align-items: center;
   padding: 20px;
   background-color: var(--grey-color);
   font-family: 'Roboto', sans-serif;
   color: #333;
   background-image: url(../../assets/images/fondo-poli.svg);
+  padding-top: 10%;
   @media (max-width: 500px) {
     padding: 0;
     height: 100%;
@@ -72,6 +73,10 @@
           color: var(--primary-color);
           transform: scale(1.01);
         }
+        @media (max-width: 500px) {
+          padding: 8px 20px;
+          font-size: 0.9rem;
+        }
       }
     }
 
@@ -89,6 +94,7 @@
       }
       @media (max-width: 500px) {
        margin-left: 0%;
+       
        width: 100%;
        & video{
         border-radius: 0px 0px 0px 0px;
@@ -96,7 +102,7 @@
       }
     }
     @media (max-width: 500px) {
-      margin-top: 30%;
+      margin-top: 60%;
       display: flex;
       flex-direction: column-reverse;
       width: 100%;
@@ -116,6 +122,9 @@
       font-size: 1.8rem;
       margin-bottom: 20px;
       font-weight: 700;
+      @media (max-width: 500px) {
+        font-size: 1.5rem;
+      }
     }
 
     p {
@@ -124,6 +133,7 @@
       color: #444;
       margin-bottom: 20px;
       @media (max-width: 500px) {
+        font-size: 1rem;
         text-align: center;
         margin-left: 6%;
       }
@@ -143,32 +153,35 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 100%;
+      width: 95%;
     }
   }
 }
 .divLogoHome{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   height: 10%;
   width: 20%;
   padding-top: 1%;
   padding-bottom: 1%;
   padding-left: 2%;
-
+  align-items: flex-end;
+  align-items: center;
   
   & .LogoH{
     height: 50px;
+    margin-bottom: 10px;
     @media (max-width: 500px) {
       width:45px;
       height:45px;
     }
   }
   & .Logo2H{
-    height: 50%;
+    height: 40px;
+    margin-bottom: 20px;
     @media (max-width: 500px) {
       width:100px;
-      height:45px;
+      height:35px;
     }
   }
   
