--- a/src/styles/pages/TouristPointsList.scss
+++ b/src/styles/pages/TouristPointsList.scss
@@ -1,93 +1,212 @@
 .tourist-points-list {
-    padding: 16px;
-    min-height: 100vh;
-    width: 95%;
-    margin-left: 5%;
-    background-image: url(../../assets/images/fondo-poli.svg);
-    
-    .button-container {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 20px;
+  padding: 16px;
+  min-height: 100vh;
+  width: 95%;
+  margin-left: 5%;
+  background-image: url(../../assets/images/fondo-poli.svg);
+  background-size: cover;
+  padding-top: 120px;
+  .button-container {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    align-content: center;
+    align-items: center;
+    @media (max-width: 600px) {
+      flex-direction: column;
+      width: 100%;
     }
-  
-    .add-button {
-      margin-bottom: 2%;
-      margin-top: 2%;
-      background-color: var(--primary-color);
-      justify-content: center;
-      &:hover{
-        background-color: var(--greenSoft-color);
-      }
-    }
-  
-    .tourist-point-card {
-        cursor: pointer;
-    transition: transform 0.2s ease;
-    height: 100%;
+  }
 
+  .add-button {
+    height: 40px;
+    margin-bottom: 0%;
+    margin-top: 1%;
+    background-color: var(--primary-color);
+    justify-content: center;
+    &:hover {
+      background-color: var(--greenSoft-color);
+    }
+  }
+
+  /* Contenedor de tarjetas usando flexbox */
+  .cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Alineación centrada de las tarjetas */
+    gap: 20px; /* Espacio entre las tarjetas */
+  }
+
+  /* Estilo de las tarjetas */
+  .tourist-point-card {
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    width: 230px; /* Control del ancho de las tarjetas */
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin-bottom: 20px;
+    height: auto; /* Ajuste de altura automático */
+    @media (max-width: 600px) {
+      width: 95%;
+    }
     &:hover {
       transform: scale(1.02);
     }
-      .card-image {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        @media (max-width: 600px) {
-            height: 120px;
-        }
-      }
-  
-      .card-content {
-        padding: 16px;
+
+    .card-image {
+      width: 100%;
+      height: 150px; /* Altura ajustada para no ser demasiado grande */
+      object-fit: cover; /* Asegura que la imagen cubra el área sin distorsión */
+      @media (max-width: 600px) {
+        height: 120px; /* Ajuste para pantallas pequeñas */
       }
     }
-  
-    .pagination {
-      margin-top: 20px;
+
+    .card-content {
+      padding: 16px;
       display: flex;
-      justify-content: center;
-      & button{
-        background-color: var(--greenSoft-color);
-        &:hover{
-            background-color: #00a8bf;
-        }
-      }
-      .css-yuzg60-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected{
-        background-color: var(--primary-color);
-      }
+      flex-direction: column;
+      height: 100%; /* Asegura que el contenido ocupe todo el espacio disponible */
     }
-
+  }
+.Rating{
+  width: 30%;
+  font-size: 1rem;
 }
-@media (max-width: 600px) {
-    .tourist-points-list {
-      padding-left: 7%;
-
-      .add-button {
-        display: block;
-        margin: 0 auto 20px;
-      }
-  
-      .MuiGrid-container {
-        justify-content: center;
-      }
-    }
-}
-.nameRating{
+  .nameRating {
     width: 100%;
     margin-bottom: 15px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
+  }
+  @media (max-width: 600px) {
+    margin-bottom: 5%;
+  }
 }
 
-//   --primary-color: #007a8c;
-//   --primarySoft-color: #acd0d5;
-//   --secundary-color: #336749;
-//   --grey-color: #f6f6f6;
+@media (max-width: 600px) {
+  .tourist-points-list {
+    padding-left: 7%;
+    position: relative;
+    .add-button {
+      display: block;
+      margin: 0 auto 20px;
+    }
+  }
 
+  .tourist-point-card {
+    width: 50%;
+  }
+}
 
-//   --greenSoft-color: #008ba1;
-//   --blue-light-color: #64C9ED;
+.filter-container{
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+  margin-top: 2%;
+  justify-content: space-between;
+  align-items: center;
+  @media (max-width: 600px) {
+    flex-direction: column;
+    width: 100%;
+  }
+  & .filter-input-title {
+    width: 45%;
+    background-color: var(--background-color); 
+    border-radius: 5px; 
+    padding: 0px; 
+  
+    .MuiInputLabel-root {
+      color: var(--primary-color); 
+    }
+  
+    .MuiOutlinedInput-root {
+      border-color: var(--primary-color); 
+    }
+  
+    &:hover .MuiOutlinedInput-root {
+      border-color: var(--secondary-color);  
+    }
+    @media (max-width: 600px) {
+      width: 60%;
+    }
+  }
+  & .RatingFilter{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @media (max-width: 600px) {
+      margin-top: 5%;
+      width: 100%;
+      flex-direction: column-reverse;
+    }
+  }
+  & .CleanFilter{
+    width: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @media (max-width: 600px) {
+      width: 100%;
+    }
+  }
+}
+.rating-slider {
+  width: 60% !important;
+  margin: 5px 0;
+  .MuiSlider-rail {
+    background-color: #027a8ca9;
+  }
+  .MuiSlider-track {
+    background-color: var(--primary-color); 
+  }
+
+  .MuiSlider-thumb {
+    background-color: var(--secondary-color);
+  }
+
+  .MuiSlider-valueLabel {
+    background-color: var(--primary-color);
+    color: white;
+  }
+  @media (max-width: 600px) {
+    width: 60%;
+  }
+}
+.pagCont{
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  position: absolute;
+  bottom: 5%;
+  @media (max-width: 600px) {
+    bottom: 0;
+  }
+}
+.clear-filters-button{
+  height: 40px;
+  width: 40px;
+  padding: 5px;
+  
+ & .iconClean{
+  height: 30px;
+  width: 30px;
+  @media (max-width: 600px) {
+    width: 24px;
+    height: 24px;
+  }
+  }
+}
+.textColor{
+  color: var(--primary-color);
+  font-weight: 700;
+  @media (max-width: 600px) {
+    font-size: 0.8rem;
+  }
+}
