--- a/src/styles/pages/_AllPromotions.scss
+++ b/src/styles/pages/_AllPromotions.scss
@@ -3,15 +3,17 @@
     margin-left: 5%;
     padding: 20px;
     background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
     // border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-image: url(../../assets/images/fondo-poli.svg);
-
-    h2 {
+    padding-top: 10%;
+    & h2 {
         text-align: center;
-        font-size: 2rem;
-        color: #333;
-        margin-bottom: 20px;
+        font-size: 1.2rem;
+        color: #027A8C;
+        margin-bottom: 10px;
         @media (max-width: 480px) {
             font-size: 1rem;
             margin-bottom: 0px;
@@ -23,7 +25,7 @@
         display: flex;
         flex-wrap: wrap;
         gap: 15px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         padding: 15px;
         background-color: #fff;
         border-radius: 8px;
@@ -62,23 +64,24 @@
             th {
                 padding: 12px 15px;
                 text-align: left;
-                font-size: 1rem;
+                font-size: 0.8rem;
                 @media (max-width: 480px) {
                     font-size: 0.8rem;
                 }
             }
         }
 
-        tbody {
+        & tbody {
             tr {
                 &:hover {
                     background-color: #f1f1f1;
+                    
                 }
 
                 td {
-                    padding: 12px 15px;
+                    padding: 0px 10px;
                     border-bottom: 1px solid #ddd;
-                    font-size: 1rem;
+                    font-size: 0.9rem;
                     color: #333;
                     @media (max-width: 480px) {
                         font-size: 0.8rem;
@@ -114,6 +117,8 @@
     }
     @media (max-width: 480px) {
         height: 100%;
+        margin-left: 10%;
+        padding-top: 10%;
     }
 }
 
@@ -238,7 +243,7 @@
 @media (max-width: 480px) {
     .promotions-list {
         padding: 10px;
-        
+        padding-top: 100px;
     }
 
     h2 {
@@ -274,46 +279,48 @@
 
     .promotions-table {
         min-width: 600px;
-        margin-left: 5px;
     }
 }
 .pagination {
     display: flex;
     justify-content: center;
-    margin: 20px 0;
-
-    & button {
-        // background-color: #f1f1f1;
-        border: 1px solid #ccc;
-        padding: 8px 15px;
-        margin: 0 5px;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: background-color 0.3s ease, color 0.3s ease;
-        font-size: 1rem;
-        color: #333;
-        outline: none;
-        @media (max-width: 480px) {
-            padding: 4px 8px;
-            border-radius: 5px;
-        }
-        &:hover {
-            background-color: #ddd;
-            // color: #000;
-        }
-
-        &.active {
-            background-color: var(--primary-color-active);
-            color: #fff;
-            border: none;
-            pointer-events: none;
-        }
-
-        &:disabled {
-            background-color: #e9ecef;
-            color: #6c757d;
-            cursor: not-allowed;
-        }
+    @media (max-width: 480px) {
+        margin-top: 20px;
+        gap: 5px;
+        margin-left: 0px;
     }
+    // & button {
+    //     // background-color: #f1f1f1;
+    //     border: 1px solid #ccc;
+    //     padding: 8px 15px;
+    //     margin: 0 5px;
+    //     border-radius: 10px;
+    //     cursor: pointer;
+    //     transition: background-color 0.3s ease, color 0.3s ease;
+    //     font-size: 1rem;
+    //     color: #333;
+    //     outline: none;
+    //     @media (max-width: 480px) {
+    //         padding: 4px 8px;
+    //         border-radius: 5px;
+    //     }
+    //     &:hover {
+    //         background-color: #ddd;
+    //         // color: #000;
+    //     }
+
+    //     &.active {
+    //         background-color: var(--primary-color-active);
+    //         color: #fff;
+    //         border: none;
+    //         pointer-events: none;
+    //     }
+
+    //     &:disabled {
+    //         background-color: #e9ecef;
+    //         color: #6c757d;
+    //         cursor: not-allowed;
+    //     }
+    // }
 }
 
