--- a/src/styles/pages/_branchesTable.scss
+++ b/src/styles/pages/_branchesTable.scss
@@ -4,13 +4,18 @@
     // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     // margin-bottom: 20px;
     min-height: 100vh;
-    padding-left: 10%;
+    padding-left: 5%;
     padding-top: 10%;
     width: 100%;
     overflow: hidden;
     -webkit-overflow-scrolling: touch;
     @media (max-width: 600px) {
+      padding-left: 8%;
+    }
+    @media (max-width: 600px) {
         padding-top: 20%;
+        padding-left: 11%;
+        padding-right: 2%;
       }
   }
   
