--- a/src/styles/pages/_userManagement.scss
+++ b/src/styles/pages/_userManagement.scss
@@ -78,11 +78,17 @@
         }
     }
 
-    h1 {
-        font-size: 1.2rem;
-        margin-bottom: 20px;
+    & h1 {
         text-align: center;
-        color: #5e5e5e;
+        font-size: 1.2rem;
+        color: #027A8C;
+        margin-bottom: 15px;
+        @media (max-width: 480px) {
+            padding-bottom: 15px;
+            font-size: 1rem;
+            margin-bottom: 0px;
+            margin-top: 5px;
+        }
     }
 
     ul {
@@ -269,6 +275,7 @@
     min-width: 600px;
     border-collapse: collapse;
     margin-bottom: 20px;
+    background-color: #ffffffd1;
 }
 
 .user-table th, .user-table td {
@@ -277,6 +284,7 @@
     text-align: left;
     @media (max-width: 768px) {
         padding: 7px 10px;
+        font-size: 0.7rem;
     }
 }
 
