editar sucursal estilos responsivos

--- a/src/styles/components/ButtonStyles.scss
+++ b/src/styles/components/ButtonStyles.scss
@@ -5,6 +5,7 @@
     &:hover {
         color: #fff;
         background-color: #01abc1;
+        border: 1px solid #01abc1;
     }
     @media (max-width: 600px) {
         font-size: 0.6rem;
