--- a/src/styles/components/BranchDetails.scss
+++ b/src/styles/components/BranchDetails.scss
@@ -1,6 +1,6 @@
 .branch-details {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     gap: 1.5rem;
     padding-left:10%;
@@ -8,18 +8,23 @@
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     min-height: 100vh;
+    height: 100%;
     padding-top: 15%;
+    justify-content: space-evenly;
     @media (max-width: 600px) {
       padding-top: 25%;
+      flex-direction: column;
+      height: 90%;
     }
     &__image {
       width: 100%;
-      max-width: 300px;
       height: auto;
+      max-width: 400px;
       border-radius: 8px;
       object-fit: cover;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       @media (max-width: 600px) {
+        max-width: 300px;
         max-width: 90%;
       }
     }
@@ -95,6 +100,28 @@
       display: flex;
       gap: 1rem;
   
+    }
+  }
+  .textInfo{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    @media (max-width: 600px) {
+      width: 95%;
+    }
+  }
+  .MapInfo{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    height: 100%;
+    @media (max-width: 600px) {
+      width: 95%;
+      overflow: hidden;
+      margin-bottom: 30px;
     }
   }
   .swal2-popup{
@@ -218,4 +245,10 @@
 .swal2-imageBranch{
   margin-top: 5%;
   margin-bottom: 5%;
+}
+
+.branch-details__map {
+  width: 100%;
+  height: 300px; 
+  margin-top: 20px;
 }
