--- a/src/styles/pages/TouristPointDetail.scss
+++ b/src/styles/pages/TouristPointDetail.scss
@@ -3,21 +3,22 @@
     padding-top: 10%;
     width: 100vw;
     @media (max-width: 768px) {
-      width: 90%;
-      margin-left: 7%;
+      width: 95%;
+      margin-left: 5%;
       padding-bottom: 2%;
      }
     // background-image: url(../../assets/images/fondo-poli.svg);
     .detail-card {
-        padding: 16px;
+        padding: 6px;
         margin: auto;
         display: flex;
-        max-width: 600px;
+        max-width: 700px;
+        width: 100%;
         height: 95%;
         flex-direction: column;
         justify-content: space-between;
       .detail-image {
-        width: 100%;
+        width: 100%; 
         max-height: 300px;
         margin-bottom: 16px;
         border-radius: 10px;
@@ -33,38 +34,11 @@
         justify-content: space-around;
         margin-top: 30px;
         margin-bottom: 50px;
-        // .btnSave {
-        //     color: var(--primary-color);
-        //     &:hover{
-        //         color: #00b6ce;
-        //     }
-        // }
-        
-        // .btnCancel{
-        //     color: #af2432;
-        //     &:hover{
-        //        color: #de1227;
-        //     }
-        // }
-        // .btnEdit{
-        //     color: var(--primary-color);
-        //     border: solid 0.2px var(--primary-color);
-        //     padding: 5px 15px;
-        //     &:hover{
-        //         color:#fff;
-        //         background-color:  var(--greenSoft-color);
-        //     }
-        // }
-        // .btnDelete{
-        //     color: #af2432;
-        //     border: solid 0.2px #af2432;
-        //     padding: 5px 15px;
-        //     &:hover{
-        //         color:#fff;
-        //         background-color:  #af2432;
-        //     }
-        // }
       }
+      @media (max-width: 768px) {
+
+        padding: 5px;
+       }
     }
     
   }
@@ -81,7 +55,13 @@
             &:hover{
                 cursor: pointer;
             }
+            @media (max-width: 768px) {
+              height: 40px;
+             }
         }
+        @media (max-width: 768px) {
+          height: 70px;
+         }
     }
   }
   .thumbnails-container {
@@ -128,5 +108,48 @@
       }
     }
     .descriptionTOur{
-      margin-top: 5%;
+      margin-top: 3%;
+      font-size: 0.9rem;
     }
+
+    
+  .back-button {
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    color: rgb(2, 122, 140);
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: absolute;
+    z-index: 0;
+    border-radius: 30%;
+    padding: 8px 8px;
+    top: 20%;
+    left: 7%;
+    & h4{
+      margin-left: 10px;
+    }
+    &:hover {
+      color: rgb(0, 170, 196); 
+      border-radius: 50%;
+      background-color: transparent;
+    }
+
+    .back-icon {
+      font-size: 1.5rem;
+      @media (max-width: 600px) {
+        font-size: 1rem;
+     }
+    }
+
+    @media (max-width: 600px) {
+     background-color: #e2e2e2f4;
+     font-size: 1rem;
+  }
+}
+
+.css-1oqqzyl-MuiContainer-root {
+  max-width: 1500px;
+}
