moderacion de comentarios

--- a/src/styles/pages/TouristPointsList.scss
+++ b/src/styles/pages/TouristPointsList.scss
@@ -186,7 +186,7 @@
   justify-content: center;
   width: 90%;
   position: absolute;
-  bottom: 5%;
+  bottom: 0;
   @media (max-width: 600px) {
     bottom: 0;
   }
