--- a/src/styles/components/BranchDetails.scss
+++ b/src/styles/components/BranchDetails.scss
@@ -24,6 +24,7 @@
       border-radius: 8px;
       object-fit: cover;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      max-height: 300px;
       @media (max-width: 600px) {
         max-width: 300px;
         max-width: 90%;
