--- a/src/styles/pages/_branchesTable.scss
+++ b/src/styles/pages/_branchesTable.scss
@@ -4,7 +4,7 @@
     // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     // margin-bottom: 20px;
     min-height: 100vh;
-    padding-left: 5%;
+    padding-left: 73px;
     padding-right: 2%;
     padding-top: 10%;
     width: 100%;
