--- a/src/styles/pages/CommentModeration.scss
+++ b/src/styles/pages/CommentModeration.scss
@@ -6,6 +6,7 @@
         padding-top: 10%;
         padding-left: 10%    ;
         min-height: 100%;
+        background-image: url(../../assets/images/fondo-poli.svg);
         & h1 {
         text-align: center;
         margin-bottom: 1rem;
@@ -83,7 +84,7 @@
             padding: 5px;
             text-align: left;
             border: 1px solid #ddd;
-
+            background-color: #fff;
             &.pending{
                 color: rgb(223, 171, 2);
             }
@@ -96,6 +97,7 @@
         }
     
         th {
+            font-size: 1rem;
             background-color: var(--primary-color);
             font-weight: bold;
             padding: 10px;
