--- a/src/styles/pages/_branchesTable.scss
+++ b/src/styles/pages/_branchesTable.scss
@@ -7,6 +7,10 @@
     padding-left: 73px;
     padding-right: 2%;
     padding-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
     width: 100%;
     overflow: hidden;
     -webkit-overflow-scrolling: touch;
@@ -21,32 +25,33 @@
   }
   
   .branches-table {
-    width: 100%;
+    width: 90%;
     border-collapse: collapse; 
     background-color: #fff;  
-    border-radius: 8px;
+    // border-radius: 8px;
     overflow: hidden; 
     
     th, td {
       padding: 5px 10px;
       text-align: left;
-      font-size: 1.2rem;
+      font-size: 1rem;
       color: var(--primary-color);
       @media (max-width: 600px) {
         font-size: 0.93rem;
       }
     }
     
-    th {
-      background-color: var(--primary-color);  
-      color: #fff;  
-    }
-    
-    td {
-      border-bottom: 1px solid #52838b48; ; 
+    th, td {
+            padding: 5px;
+            text-align: left;
+            font-size: 1rem;
+            height: 40px;
+            border: 1px solid #ddd;
+            background-color: #fff;
     }
     tr{
-        height: 80px;
+      font-size: 1rem;
+        // height: 40px;
         @media (max-width: 600px) {
             height: 50px;
           }
@@ -54,6 +59,12 @@
     tr:hover {
       background-color:#00798c17; 
     }
+    th {
+      background-color: var(--primary-color);
+      font-weight: 600;
+      padding: 10px;
+      color: #fff;
+  }
   }
   
   .branch-image {
